crates/cadmus-ui/src/snapshots/cadmus_ui__markdown__tests__a_narrow_document_snapshot.snap
---
source: crates/cadmus-ui/src/markdown.rs
expression: "render_document(source, 12, highlighter())"
---
[
    Line {
        spans: [
            Span {
                text: "name",
                style: Style {
                    fg: None,
                    bg: None,
                    mods: Modifiers {
                        bold: true,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
            Span {
                text: ": ",
                style: Style {
                    fg: Some(
                        Slot(
                            TextSubtle,
                        ),
                    ),
                    bg: None,
                    mods: Modifiers {
                        bold: false,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
            Span {
                text: "alpha",
                style: Style {
                    fg: None,
                    bg: None,
                    mods: Modifiers {
                        bold: false,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
        ],
    },
    Line {
        spans: [
            Span {
                text: "value",
                style: Style {
                    fg: None,
                    bg: None,
                    mods: Modifiers {
                        bold: true,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
            Span {
                text: ": ",
                style: Style {
                    fg: Some(
                        Slot(
                            TextSubtle,
                        ),
                    ),
                    bg: None,
                    mods: Modifiers {
                        bold: false,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
            Span {
                text: "1",
                style: Style {
                    fg: None,
                    bg: None,
                    mods: Modifiers {
                        bold: false,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
        ],
    },
    Line {
        spans: [
            Span {
                text: "name",
                style: Style {
                    fg: None,
                    bg: None,
                    mods: Modifiers {
                        bold: true,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
            Span {
                text: ": ",
                style: Style {
                    fg: Some(
                        Slot(
                            TextSubtle,
                        ),
                    ),
                    bg: None,
                    mods: Modifiers {
                        bold: false,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
            Span {
                text: "beta",
                style: Style {
                    fg: None,
                    bg: None,
                    mods: Modifiers {
                        bold: false,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
        ],
    },
    Line {
        spans: [
            Span {
                text: "value",
                style: Style {
                    fg: None,
                    bg: None,
                    mods: Modifiers {
                        bold: true,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
            Span {
                text: ": ",
                style: Style {
                    fg: Some(
                        Slot(
                            TextSubtle,
                        ),
                    ),
                    bg: None,
                    mods: Modifiers {
                        bold: false,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
            Span {
                text: "200",
                style: Style {
                    fg: None,
                    bg: None,
                    mods: Modifiers {
                        bold: false,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
        ],
    },
    Line {
        spans: [],
    },
    Line {
        spans: [
            Span {
                text: "done",
                style: Style {
                    fg: None,
                    bg: None,
                    mods: Modifiers {
                        bold: false,
                        dim: false,
                        italic: false,
                        underline: false,
                        inverse: false,
                        strikethrough: false,
                    },
                },
            },
        ],
    },
]
